--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion</title>
+    <title>Inscription</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@400;700&display=swap">
@@ -12,40 +12,43 @@
 <body>
     <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100">
-            <div class="col-md-6 d-flex align-items-center justify-content-center order-0 order-md-1">
+            <div class="col-md-6 d-flex align-items-center justify-content-center order-1 order-md-1">
                 <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Image" class="img-fluid">
             </div>
-            <div class="col-md-6 d-flex align-items-center justify-content-center order-1 order-md-0">
+            <div class="col-md-6 d-flex align-items-center justify-content-center order-2 order-md-2">
                 <div class="w-100 px-3 px-md-0" style="max-width: 600px;">
-                    <h1 class="text-left font-weight-bold mb-4 custom-heading">Connexion</h1>
-                    <form action="/connexion" method="post">
-                        <div class="form-group">
-                            <label for="email">Adresse e-mail</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Abdi123@gmail.com" required>
+                    <h1 class="text-left font-weight-bold mb-4 custom-heading">S'inscrire</h1>
+                    <form action="/inscription" method="POST">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="name">Nom:</label>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Entrez votre nom" required>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="prenom">Prenom:</label>
+                                <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Entrez votre prénom" required>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="password">Mot de passe</label>
+                            <label for="email">E-mail:</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Entrez votre e-mail" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Mot de passe:</label>
                             <div class="position-relative">
                                 <input type="password" class="form-control" id="password" name="password" placeholder="Entrez votre mot de passe" required>
                                 <i class="far fa-eye position-absolute" id="togglePassword" style="top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
                             </div>
                             <p class="password-hint mt-2">Il doit contenir au moins 8 caractères, incluant des lettres et des chiffres.</p>
                         </div>
-                        <div class="form-group form-check d-flex justify-content-between align-items-center">
-                            <div>
-                                <input type="checkbox" class="form-check-input" id="rememberMe">
-                                <label class="form-check-label" for="rememberMe">Se souvenir de moi</label>
-                            </div>
-                            <a href="#" class="text-primary">Mot de passe oublier?</a>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="terms" required>
+                            <label class="form-check-label" for="terms">J'accepte les Conditions Générales</label>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Se Connecter</button>
-                        <button type="button" class="btn btn-outline-primary btn-block mt-2">
-                            <i class="fab fa-google"></i> Se Connecter avec Google
-                        </button>
+                        <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
                     </form>
                     <hr>
-                    <br><br>
-                    <p class="mt-3 text-center account-hint">Vous n'avez pas de compte? <a href="/inscription" class="text-primary">Inscrivez-vous</a></p>
+                    <p class="mt-3 text-center account-hint">Vous avez déjà un compte? <a href="/connexion" class="text-primary">Connectez-vous</a></p>
                 </div>
             </div>
         </div>
