--- a/templates/project.html
+++ b/templates/project.html
@@ -14,15 +14,15 @@
     <hr>
     <div class="row mt-4">
         <div class="col-12">
+            <p>Total Projects: {{ total_projects }}</p>
             <div class="d-flex flex-column">
-                {% for i in range(3) %}
-                <div class="d-flex flex-row flex-nowrap overflow-auto mb-4">
-                    {% for project in projects[i*10:(i+1)*10] %}
-                    <div class="p-2" style="flex: 0 0 10%;">
+                <div class="d-flex flex-row flex-wrap">
+                    {% for project in projects %}
+                    <div class="p-2" style="flex: 0 0 calc(25% - 10px); margin: 5px;">
                         <a href="{{ url_for('project_detail', project_id=project.project_id) }}" class="text-decoration-none">
-                            <div class="card h-100 d-flex flex-column justify-content-between" style="width: 180px; height: 180px; background-color: #f0f8ff; border-radius: 10px;">
+                            <div class="card h-100 d-flex flex-column justify-content-between" style="width: 220px; height: 220px; background-color: #f0f8ff; border-radius: 20px;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center">
-                                    <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Project Icon" class="img-fluid mb-2" style="max-width: 120px;">
+                                    <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Project Icon" class="img-fluid mb-2 mx-auto" loading="lazy" style="max-width: 150px; border-radius: 20px;">
                                     <h5 class="card-title text-truncate" style="max-width: 100%;" title="{{ project.name_project }}">{{ project.name_project[:10] }}{% if project.name_project|length > 10 %}...{% endif %}</h5>
                                 </div>
                             </div>
@@ -30,7 +30,29 @@
                     </div>
                     {% endfor %}
                 </div>
-                {% endfor %}
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center mt-4">
+                        {% if prev_url %}
+                        <li class="page-item">
+                            <a class="page-link" href="{{ prev_url }}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% for page_num in range(1, (total_projects // 8) + 2) %}
+                        <li class="page-item {% if page_num == current_page %}active{% endif %}">
+                            <a class="page-link" href="{{ url_for('projects', page=page_num) }}">{{ page_num }}</a>
+                        </li>
+                        {% endfor %}
+                        {% if next_url %}
+                        <li class="page-item">
+                            <a class="page-link" href="{{ next_url }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
@@ -39,10 +61,10 @@
 <!-- Add Project Modal -->
 <div class="modal fade" id="addProjectModal" tabindex="-1" role="dialog" aria-labelledby="addProjectModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content" style="border-radius: 20px;">
             <div class="modal-header">
                 <div class="text-center w-100">
-                    <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Icon" class="img-fluid mb-4" style="max-width: 150px;">
+                    <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Icon" class="img-fluid mb-4" style="max-width: 200px; border-radius: 20px;">
                     <h5 class="modal-title mt-2" id="addProjectModalLabel"><strong>Démarrez votre aventure avec Mashru3</strong></h5>
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
