--- a/templates/project_overview.html
+++ b/templates/project_overview.html
@@ -2,7 +2,7 @@
     <div class="card h-100 mt-4" style="background-color: #f0f8ff; border-radius: 10px;">
         <div class="card-body">
             <p><strong>Description:</strong> {{ project.description }}</p>
-            <p><strong>Date de Création:</strong> {{ project.created_date }}</p>
+            <p><strong>Date de Création:</strong> {{ project.created_at }}</p>
             <p><strong>Date de Début:</strong> {{ project.start_date }}</p>
             <p><strong>Date de Fin:</strong> {{ project.end_date }}</p>
             <img src="{{ project.image_url }}" alt="Project Image" class="img-fluid">
