--- a/templates/project.html
+++ b/templates/project.html
@@ -23,7 +23,7 @@
                             <div class="card h-100 d-flex flex-column justify-content-between" style="width: 220px; height: 220px; background-color: #f0f8ff; border-radius: 20px;">
                                 <div class="card-body text-center d-flex flex-column justify-content-center">
                                     <img src="{{ url_for('static', filename='images/Logo-UD.svg') }}" alt="Project Icon" class="img-fluid mb-2 mx-auto" loading="lazy" style="max-width: 150px; border-radius: 20px;">
-                                    <h5 class="card-title text-truncate" style="max-width: 100%;" title="{{ project.name_project }}">{{ project.name_project[:10] }}{% if project.name_project|length > 10 %}...{% endif %}</h5>
+                                    <h5 class="card-title text-truncate" style="max-width: 100%;" title="{{ project.name_project }}">{{ project.name[:10] }}{% if project.name|length > 10 %}...{% endif %}</h5>
                                 </div>
                             </div>
                         </a>
@@ -74,16 +74,16 @@
             <div class="modal-body">
                 <form action="/add_project" method="POST">
                     <div class="form-group">
-                        <label for="name_project">Nom du Projet:</label>
-                        <input type="text" class="form-control" id="name_project" name="name_project" required>
+                        <label for="name">Nom du Projet:</label>
+                        <input type="text" class="form-control" id="name" name="name" required>
                     </div>
                     <div class="form-group">
                         <label for="description">Description:</label>
                         <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="image_url">URL de l'image:</label>
-                        <input type="text" class="form-control" id="image_url" name="image_url">
+                        <label for="image">URL de l'image:</label>
+                        <input type="text" class="form-control" id="image" name="image">
                     </div>
                     <div class="form-group">
                         <label for="start_date">Date de Début:</label>
