--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,64 +1,97 @@
-.text-truncate {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+/* Connexion & Inscritption */
+.password-hint {
+    font-size: 0.9em;
+    color: #666;
 }
 
-.text-truncate:hover {
-    overflow: visible;
-    white-space: normal;
-}
-
-.card {
-    border-radius: 10px;
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
+.input-group-text {
     cursor: pointer;
+    background-color: transparent; 
+    border: none;
 }
 
-.modal-body .form-control {
-    background-color: #f8f9fa !important;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important;
+.custom-heading {
+    margin-left: 10px; 
+    font-family: 'Roboto Flex', sans-serif;
 }
 
-.nav-tabs .nav-link {
-    color: inherit !important;
-    border: none !important;
+.form-control, .btn {
+    border-radius: 0;
 }
 
-.nav-tabs .nav-link.active {
-    color: #007bff !important;
-    border-bottom: 2px solid #007bff !important;
+.form-control {
+    background-color: #f1f3f4; 
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); 
+    border: 1px solid #ccc; 
 }
+
+.account-hint {
+    font-size: 0.9em;
+    color: #666;
+    padding-top: 15px; 
+    margin-left: 10px; 
+}
+
+.account-hint .text-primary {
+    color: #007bff; 
+}
+
+.form-check-label {
+    margin-left: 5px;
+}
+
+.text-primary {
+    color: #007bff !important; 
+}
+
+/*Sidebar*/
+.sidebar {
+    width: 250px;
+    background-color: #fff;
+    color: #000;
+    padding: 15px;
+    height: 100vh;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.sidebar h2 {
+    text-align: center;
+    color: grey;
+    font-weight: bold; 
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    padding: 10px;
+    text-align: left;
+}
+
+.sidebar ul li.active {
+    background-color: #e0e0e0; 
+    border-radius: 5px;
+}
+
+.sidebar ul li a {
+    color: #000;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar ul li a i {
+    margin-right: 10px;
+    color: #000;
+}
+
+
+/* icon styles */
+.icon-home::before { content: "\1F3E0"; }
+.icon-projects::before { content: "\1F4C8"; }
+.icon-calendar::before { content: "\1F4C5"; }
+.icon-groups::before { content: "\1F465"; }
+.icon-notifications::before { content: "\1F514"; }
+.icon-settings::before { content: "\2699"; }
